2006-09-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -calendarFromContent:cnt]): new helper method.
	([SOGoAppointmentObject -firstEventFromCalendar:calendar]): new
	helper method.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -doCalendarQuery:context]): added a
	hackish test to detect whether the request concernes VEVENT's or
	anything else. Return events only in the former case.
	([SOGoAppointmentFolder
	-fetchOverviewInfosFrom:_startDateto:_endDate]): retrieve the
	c_name quickfield so that the calendar list can identify the
	appointments with their complete "filename".

	* OGoContentStore/OCSiCalFieldExtractor.m: use CardGroup's
	groupsOfClass:fromSource: to parse the given vcalendar.

	* UI/Scheduler/iCalRecurrenceRule+SOGo.m: removed obsolete class.

	* UI/Scheduler/SOGoAppointment+UIx.h: removed obsolete class.

	* SoObjects/SOGo/SOGoAppointmentICalRenderer.[hm]: removed
	obsolete class.

	* SoObjects/SOGo/SOGoAppointment.[hm]: removed obsolete class.

2006-09-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupName:inContext:acquire:]): be
	sensitive to the CalDAV method names.
	([SOGoAppointmentFolder -doCalendarQuery:context]): method for the
	"calendar-query" CalDAV method name.

	* UI/WebServerResources/ContactsUI.js: removed a lot of useless
	code coming originally from MailerUI.js.

	* UI/WebServerResources/UIxContactEditor.js: imitate the
	Thunderbird address book by completing the display name with the
	content of the first and last name fields, until the display name
	is modified manually.

	* UI/WebServerResources/generic.js: added a "trim" method to the
	String class.

	* UI/Contacts/UIxContactsListViewBase.m ([UIxContactsListViewBase
	-displayName]): new method that returns the display name from "cn"
	or from the "displayName" key if found.
